Added SignalR For BlazorWeb And Added VideoStreamComponent.

--- a/ObjectDetection.MAUI/ObjectDetection.MAUI/wwwroot/index.html
+++ b/ObjectDetection.MAUI/ObjectDetection.MAUI/wwwroot/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="ObjectDetection.MAUI.styles.css" />
-    <script src="js/camera.js"></script>
-
     <link rel="icon" href="data:,">
+    <HeadOutLet/>
 </head>
 
 <body>
