--- a/ObjectDetection.Blazor/wwwroot/index.html
+++ b/ObjectDetection.Blazor/wwwroot/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <script src="js/camera.js"></script>
     <link href="ObjectDetection.Blazor.styles.css" rel="stylesheet" />
+    <HeadOutlet />
+
 </head>
 
 <body>
